--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 
-docker-compose.yml
+docker-compose.override.yml
 /.idea
 /.vscode
 docker/php/Dockerfile
